fix(*): fix placeholder segment wrong position

--- a/src/index.less
+++ b/src/index.less
@@ -59,7 +59,7 @@ body {
   }
 }
 
-.ui.placeholder {
+.ui.placeholder:not(.segment) {
   margin-top: -10px;
 }
 
